Corndog model added and recipe created

--- a/src/main/resources/assets/towerheroesgear/lang/en_us.json
+++ b/src/main/resources/assets/towerheroesgear/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.towerheroesgear.corndog": "Corndog",
   "item.towerheroesgear.mana": "Mana",
+  "item.towerhearoesgear.toy_scientist": "Toy Scientist",
 
   "itemgroup.towerheroesgear": "Tower Heroes Gear"
 }
